<resources>
    <string name="app_name">twomore</string>
    <string name="action_settings">Settings</string>
    <string name="loginlater2Value">Login Later</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storyName">Story Name</string>
    <string name="addNewStorytoList">Add Story</string>
    <string name="storyDescription">Story Description</string>
    <string name="Storiesbutton">Stories</string>
    <string name="videosbutton">Videos</string>
    <string name="gamesButton">Games</string>
    <string name="title_activity_video_player">videosActivity</string>
    <string name="title_activity_video_list_demo">VideoListDemoActivity</string>
    <string name="title_activity_youtube_video_list">YoutubeVideoList</string>
    <string name="title_activity_display_story_activitybackup">DisplayStoryActivitybackup</string>
    <string name="button_previous">Previous</string>
    <string name="button_nextstory">Next</string>
    <string name="button_share">Share</string>


</resources>
