<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sunilm.twomore.OverViewFragement">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <Button
        android:id="@+id/Storiesbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Storiesbutton" />

    <Button
        android:id="@+id/videosbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/videosbutton" />

    <Button
        android:id="@+id/gamesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gamesButton" />

    </LinearLayout>
</FrameLayout>
