<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sunilm.twomore.AddNewVideoFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="192dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/storyName" />

            <EditText
                android:id="@+id/addNewstoryTolisteditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="192dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/storyDescription" />

            <EditText
                android:id="@+id/addNewstoryDescriptionlisteditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/addNewStorytoList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addNewStorytoList" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
